--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,7 +1,7 @@
-@import "variable";
-@import "animation";
-@import "base";
-@import "mixin";
-@import "custom";
-@import 'home';
-@import 'popup';
+@forward "variable";
+@forward "animation";
+@forward "base";
+@forward "mixin";
+@forward "custom";
+@forward "home";
+@forward "popup";
