--- a/src/assets/css/_popup.scss
+++ b/src/assets/css/_popup.scss
@@ -1,3 +1,5 @@
+@use "mixin" as *;
+
 .popup {
     &__wrapper {
       position: fixed;
@@ -19,7 +21,7 @@
     }
   
     &__container {
-      @extend %Popup-base-setting;
+      @extend %popup-base-setting;
       position: relative;
       flex-direction: column;
       width: 60rem;
@@ -33,15 +35,15 @@
     }
   
     &__header {
-      @extend %Popup-base-setting;
+      @extend %popup-base-setting;
       justify-content: space-between;
       padding: 1rem;
       z-index: 2;
   
       h2 {
-        font-size: 1.6rem;
+        font-size: var(--cafe--font-xl);
         color: var(--eip-color-gray);
-        margin: 0; /* 移除 margin */
+        margin: 0; 
       }
     }
   
@@ -54,7 +56,7 @@
     }
   
     &__footer {
-      @extend %Popup-base-setting;
+      @extend %popup-base-setting;
       padding: 1.5rem 2rem;
       gap: 1rem;
       z-index: 2;
@@ -78,15 +80,18 @@
       }
     &__text-content{
         display: grid;
-        padding: 2rem;
-        gap: 1rem;
+        padding: 2rem 2rem 0rem 2rem;
+        gap: 0.5rem;
         color: var(--cafe-color-brown);
         span{
-            font-size: 1.4rem;
+            font-size: var(--cafe--font-md);
             color: var(--cafe-color-brown-lighter);
         }
         p{
-            font-size: 1.5rem;
+            font-size: var(--cafe--font-xl);
+        }
+        h3{
+          font-weight: 700;
         }
     }
     &__text{
@@ -94,37 +99,58 @@
         padding: 0 var(--cafe--padding-sm) ;
         color: var(--cafe-color-brown);
         line-height: 1.7;
+        div{
+          display: flex;
+          justify-content: space-between;
+          div{
+            font: var(--cafe--font-lg);
+            background-color: var(--cafe-color-gray);
+            color: var(--cafe-color-gray-darken);
+            letter-spacing:0.1rem;
+            height: 100%;
+            padding: 0.5rem;
+            border-radius: 1rem;
+          }
+        }
         h3,h5,li{
           line-height: inherit;
         }
+        li{
+          display: flex;
+          font-size: var(--cafe--font-md);
+          margin-bottom: var(--cafe--margin-xs);
+        }
+        h3{
+          font-weight: 700;
+        }
         h5{
           font-size: var(--cafe--font-sm);
+          color: var(--cafe-color-brown-lighter);
+          margin-bottom: var(--cafe--margin-xxs);
         }
-        li{
-          font-size: var(--cafe--font-md);
+        p{
+          margin-left: auto;
+          color: var(--cafe-color-gray-darken);
         }
         input{
         width: 0;
         visibility: hidden;
         }
         label{
-          font-size: 1.6rem;
+          font-size: var(--cafe--font-lg);
           cursor: pointer;
           position: relative;
           padding-left: 3rem;
         }
       }
     }
+    &__message{
+      &-error{
+        color: var(--cafe-color-red-darken)  !important;
+        background-color: var(--cafe-color-red) !important;
+      }
+    }
   }
-
-  
-
-  input[type="radio"]:checked + label .check__and-radio::after,
-  input[type="checkbox"]:checked + label .check__and-radio::after
-  {
-    opacity: 1;
-  }
-  
 
   @media (min-width: 768px) {
     .popup__img {
