--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -1,6 +1,6 @@
 :root {
   --cafe-color-white: #ffffff;
-  --cafe-color-transparent:#FFFDF9;
+  --cafe-color-transparent: #fffdf9;
   --cafe-color-bisque: #fef8ea;
   --cafe-color-gray: #f2f2f2;
   --cafe-color-gray-darken: #959595;
@@ -8,9 +8,9 @@
   --cafe-color-brown-lighter: rgba(98, 27, 34, 0.21);
   --cafe-color-background: rgba(0, 0, 0, 0.3);
   --cafe-color-red: rgb(255, 240, 238);
-  --cafe-color-red-darken:rgb(222, 17, 53);
+  --cafe-color-red-darken: rgb(222, 17, 53);
   --cafe-color-green: rgb(234, 246, 237);
-  --cafe-color-green-darken: #0E8345;
+  --cafe-color-green-darken: #0e8345;
 
   --cafe-radius-xxs: 0.5rem;
   --cafe-radius-xs: 0.8rem;
@@ -25,9 +25,10 @@
   --cafe--font-lg: 1.4rem;
   --cafe--font-xl: 1.5rem;
 
+  --cafe--padding-xxs: 0.5rem;
   --cafe--padding-xs: 1rem;
   --cafe--padding-sm: 2rem;
 
-  --cafe--margin-xxs:0.5rem;
+  --cafe--margin-xxs: 0.5rem;
   --cafe--margin-xs: 1rem;
 }
