--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -24,11 +24,14 @@
   --cafe--font-md: 1.2rem;
   --cafe--font-lg: 1.4rem;
   --cafe--font-xl: 1.5rem;
+  --cafe--font-xxxl: 1.8rem;
 
   --cafe--padding-xxs: 0.5rem;
   --cafe--padding-xs: 1rem;
-  --cafe--padding-sm: 2rem;
+  --cafe--padding-sm: 1.5rem;
+  --cafe--padding-lg: 2rem;
 
   --cafe--margin-xxs: 0.5rem;
   --cafe--margin-xs: 1rem;
+  --cafe--margin-sm:1.5rem;
 }
