--- a/src/assets/css/_mixin.scss
+++ b/src/assets/css/_mixin.scss
@@ -5,10 +5,28 @@
   transition: all 0.35s ease-in-out;
 }
 
+%base-btn-hover {
+  color: var(--cafe-color-white) ;
+  background-color: var(--cafe-color-brown);
+  transition: all 0.1s ease-in-out;
+}
+
 %popup-base-setting {
   display: flex;
   border-radius: var(--cafe-radius-sm);
   background: var(--cafe-color-white);
+}
+%popup-base-setting-2 {
+  display: flex;
+  border-radius: var(--cafe-radius-sm);
+  background: var(--cafe-color-brown);
+  color: var(--cafe-color-white);
+  border: 0.1rem solid var(--cafe-color-brown-lighter);
+  transition: all 0.1s ease-in-out;
+  &:hover{
+    background: var(--cafe-color-white);
+    color: var(--cafe-color-brown);
+  }
 }
 
 %check_and-setting {
